--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Boilerplate</title>
-	</head>
-	<body>
-		<div id="app"></div>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Robofriends</title>
+</head>
+
+<body>
+	<div id="app"></div>
+</body>
+
 </html>
